--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.cdnfonts.com/css/helvetica-neue-55');
+
 * {
   box-sizing: border-box;
 }
@@ -7,8 +9,11 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: 'Helvetica Neue', sans-serif;
 }
 
 body h1 {
   color: #ffffff;
+  font-weight: bold;
+  font-size: 42px;
 }
