--- a/src/components/card/style.css
+++ b/src/components/card/style.css
@@ -4,11 +4,14 @@
     border-radius: 40px;
     background-color: #ffffff;
     padding: 32px;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .card-title {
     font-size: 24px;
     font-weight: bold;
-    margin: 0;
+    margin: 0 0 42px 0;
     text-align: center;
 }
