--- a/src/components/card/style.css
+++ b/src/components/card/style.css
@@ -1,6 +1,6 @@
 .card {
-    min-width: 561px;
-    min-height: 545px;
+    width: 561px;
+    height: auto;
     border-radius: 40px;
     background-color: #ffffff;
     padding: 32px;
@@ -15,3 +15,23 @@
     margin: 0 0 42px 0;
     text-align: center;
 }
+
+@media only screen and (max-width: 600px) {
+    .card {
+        width: 18rem;
+    }
+  }
+  
+  @media only screen and (min-width: 601px) and (max-width: 1024px) {
+    body {
+      font-size: 18px;
+      background-color: #e0e0e0;
+    }
+  }
+  
+  @media only screen and (min-width: 1025px) {
+    body {
+      font-size: 20px;
+      background-color: #d0d0d0;
+    }
+  }
