--- a/src/components/chart/style.css
+++ b/src/components/chart/style.css
@@ -39,3 +39,12 @@ div.center {
   font-family: monospace;
   font-size: 1.5rem;
 }
+
+#number {
+  font-weight: bold;
+}
+
+#decimal {
+  font-size: 16px;
+  color: #9D9BF4;
+}
